# repo-template

./: pyproject.toml  zensical.toml
.github/workflows/: sync_template.yaml
site/: 404.html  index.html
site/markdown/: index.html
