[project]
name = 'repo-template'
version = '0.1.0'
description = ''
authors = [
    {name = 'Gabriel Dornas',email = 'gabrielbdornas@gmail.com'}
]
readme = 'README.md'
requires-python = '>=3.13,<4.0'
dependencies = [
    'taskipy (>=1.14.1,<2.0.0)',
    "zensical (>=0.0.19,<0.0.20)"
]


[tool.repo-template]
upstream = 'https://github.com/ziguraty/repo-template.git'


[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'


[tool.taskipy.tasks]
list = { cmd = 'task --list', help = 'Lists all tasks/comands.' }
